# bondly-api/docs/swagger.yaml
@@ -943,26 +943,6 @@ paths:
       tags:
       - 用户管理
   /api/v1/users/{id}:
-    delete:
-      consumes:
-      - application/json
-      description: 删除指定的用户账户
-      parameters:
-      - description: 用户ID
-        in: path
-        name: id
-        required: true
-        type: integer
-      produces:
-      - application/json
-      responses:
-        "200":
-          description: 用户不存在或删除失败
-          schema:
-            $ref: '#/definitions/response.Response-any'
-      summary: 删除用户
-      tags:
-      - 用户管理
     get:
       consumes:
       - application/json
